Use the same browser instance in the sync confirmation dialog.

Before this CL, the sync confirmation dialog used the active browser
when dismissing the dialog. In some cases, the active browser is different
than the browser that actually presented the sync confirmation dialog
and this leads to unexpected behavior.

This CL fixes the browser instance used by the sync confirmation dialog
and ensures that the same instace is used throughout the lifetime of the
sync confirmation dialog.

TEST=See bug
BUG=694476

Review-Url: https://codereview.chromium.org/2771113003
Cr-Commit-Position: refs/heads/master@{#460345}

Former-commit-id: fc05776e6cc541dc9f4b6652876be72549f41682